# MineC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MineC/: CMakeLists.txt
MineC/shaders/: main.glsl
MineC/src/Engine/: defines.h
MineC/src/Engine/Containers/: dynamic_array.c  dynamic_array.h
MineC/src/Engine/Graphics/: API.h  buffer.h  graphics_common.c  graphics_common.h  shader.h  uniform_buffer.h  vertex_array.h
MineC/src/Engine/Graphics/OpenGL/: ogl.c  ogl_buffer.c  ogl_defines.h  ogl_shader.c  ogl_uniform_buffer.c  ogl_vertex_array.c
MineC/src/Engine/Window/: window.h
MineC/src/Engine/Window/SDL2/: SDL2_ogl_context.c  SDL2_window.c
MineC/src/Game/: main.c
